--- a/index.html
+++ b/index.html
@@ -1,168 +1,306 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body {margin:0;font-family:Arial}
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
 
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
 
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
+    /* Desktop - 1 */
+    * {
+      position: relative;
+    }
 
-.active {
-  background-color: #04AA6D;
-  color: white;
-}
+    body {
+      margin: 0;
+      font-family: Arial
+    }
 
-.topnav .icon {
-  display: none;
-}
+    .topnav {
+      overflow: hidden;
+      background-color: #333;
+    }
 
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
+    .topnav a {
+      float: left;
+      display: block;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
 
-.dropdown .dropbtn {
-  font-size: 17px;    
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
+    .active {
+      background-color: #04AA6D;
+      color: white;
+    }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
+    .topnav .icon {
+      display: none;
+    }
 
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
+    .dropdown {
+      float: left;
+      overflow: hidden;
+    }
 
-.topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #555;
-  color: white;
-}
+    .dropdown .dropbtn {
+      font-size: 17px;
+      border: none;
+      outline: none;
+      color: white;
+      padding: 14px 16px;
+      background-color: inherit;
+      font-family: inherit;
+      margin: 0;
+    }
 
-.dropdown-content a:hover {
-  background-color: #ddd;
-  color: black;
-}
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
 
-.dropdown:hover .dropdown-content {
-  display: block;
-}
+    .dropdown-content a {
+      float: none;
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      text-align: left;
+    }
 
-.flex-containers {
-  display: flex;
- justify-content: center;
-}
-.flex-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 300px;
-  background-color:grey;
-}
+    .topnav a:hover,
+    .dropdown:hover .dropbtn {
+      background-color: #555;
+      color: white;
+    }
 
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child), .dropdown .dropbtn {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
+    .dropdown-content a:hover {
+      background-color: #ddd;
+      color: black;
+    }
 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .topnav.responsive .dropdown {float: none;}
-  .topnav.responsive .dropdown-content {position: relative;}
-  .topnav.responsive .dropdown .dropbtn {
-    display: block;
-    width: 100%;
-    text-align: left;
-  }
-}
-</style>
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    .flex-containers {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .flex-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 300px;
+      background-color: grey;
+    }
+
+    .about {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    .contact {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    .flex-item-left {
+      width: 100px;
+      margin: 10px;
+      text-align: center;
+      flex: 50%;
+    }
+
+    .flex-item-right {
+      width: 100px;
+      margin: 10px;
+      text-align: center;
+      flex: 50%;
+    }
+
+    .dog-walking {
+      width: 400px;
+      height: 537px;
+      border-radius: 15px;
+
+    }
+
+    .dog-sitting {
+      width: 400px;
+      height: 537px;
+      border-radius: 15px;
+    }
+
+    .miriam-dog {
+
+      width: 733.64px;
+      height: 833.61px;
+      border-radius: 15px;
+    }
+
+    .footer {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      background-color: white;
+      color: black;
+      text-align: center;
+    }
+
+    @media screen and (max-width: 600px) {
+
+      .topnav a:not(:first-child),
+      .dropdown .dropbtn {
+        display: none;
+      }
+
+      .topnav a.icon {
+        float: right;
+        display: block;
+      }
+    }
+
+    @media screen and (max-width: 600px) {
+      .topnav.responsive {
+        position: relative;
+      }
+
+      .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+
+      .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+      }
+
+      .topnav.responsive .dropdown {
+        float: none;
+      }
+
+      .topnav.responsive .dropdown-content {
+        position: relative;
+      }
+
+      .topnav.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
+        text-align: left;
+      }
+    }
+  </style>
 </head>
+
 <body>
 
-<div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Logo</a>
+  <div class="topnav" id="myTopnav">
+    <a href="#home" class="active">Logo</a>
     <a href="#about">Services</a>
-  <a href="#news">About</a>
-  <a href="#contact">Contact</a>
- 
+    <a href="#news">About</a>
+    <a href="#contact">Contact</a>
 
-  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-</div>
 
- <img src="images/hero-image.jpg" alt="hero image" style="width:100%; background-attachment: fixed; ">
-<div style="padding-left:16px">
- 
-</div>
-<div class="flex-container">
-  <div> <h1>Services</h1>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
-</div>
 
-<div class="flex-containers">
-  <div>
-  <h2>Dog Walking</h2>
-  1<img src="images/Miriam-dog-walking.jpg" alt="dog walking" style="width:25%; height:50%;">
-  <p>Resize the browser window to see how it works.</p></div>
-  <div>
-   <h2>Dog Sitting</h2>
-  2<img src="images/Miriam-dog-sitting.jpg" alt="dog walking" style="width:25%; height:50%;">
-  <p>Hover over the dropdown button to open the dropdown menu.</p><</div>
+  <img src="images/hero-image.jpg" alt="hero image" style="width:100%; background-attachment: fixed; ">
+  <div style="padding-left:16px">
+
   </div>
-<script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-</script>
+  <div class="flex-container">
+    <div>
+      <h1>Services</h1>
+    </div>
+  </div>
+
+  <div class="flex-containers">
+    <div class="flex-item-left">
+      <h2>Dog Walking</h2>
+      <img class="dog-walking" src="images/Miriam-dog-walking.jpg" alt="dog walking">
+      <p>: Dog walking around the local parks or around the block.</p>
+      <h2>$10 - 30 minutes per/walk</h2>
+    </div>
+    <div class="flex-item-right">
+      <h2>Dog Sitting</h2>
+      <img class="dog-sitting" src="images/Miriam-dog-sitting.jpg" alt="dog walking">
+      <p>: dog sitting at home and dog care as requested for any dog requirements.</p>
+      <h2>$20 - per/hour</h2>
+    </div>
+  </div>
+
+  <div class="about">
+    <div>
+      <h1>About</h1>
+    </div>
+    <div>
+      <p>I have experience with dogs all shapes and sizes. I have my own dog George,
+        his a bit of a kitchen supervisor =)
+      </p>
+      <br>
+      <p>Studied a diploma of animal care at Tafe for 2 years.</p>
+    </div>
+    <br>
+    <div>
+      <img class="miriam-dog" src="images/Miriam-dog.jpg" alt="">
+    </div>
+    <br>
+    <div>
+      <p>Phone Number: 0437800535</p>
+    </div>
+    <div>
+      <p>Email: Miriam@gmail.com</p>
+    </div>
+  </div>
+  <div class="contact">
+    <div>
+      <h1>Contact</h1>
+    </div>
+    <div>2</div>
+    <div>3</div>
+  </div>
+
+  <div class="footer">
+    <footer>
+      <p class="attribution">
+        <a href="#" target="_blank">Copyright 2023</a>.
+        Coded by <a href="#">Sebastian Frampton</a>.
+      </p>
+    </footer>
+  </div>
+  <script>
+    function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
+    }
+  </script>
 
 </body>
+
 </html>
