Add style to email and phone icon

--- a/index.html
+++ b/index.html
@@ -123,6 +123,45 @@
       padding-bottom: 150px;
     }
 
+    .icon-phone {
+      position: relative;
+      width: 67.02px;
+      height: 59.05px;
+      float: left;
+      padding-right: 35px;
+      padding-top: 20px;
+    }
+
+
+    .icon-email {
+      position: relative;
+      width: 67.02px;
+      height: 59.05px;
+      float: left;
+      padding-right: 15px;
+      padding-top: 50px;
+    }
+
+    .phone {
+      float: right;
+      bottom: 2.5px;
+      top: 20px;
+    }
+
+    .email {
+      float: right;
+      bottom: 2.5px;
+      top: 50px;
+    }
+
+    .ph {
+      font-weight: 700;
+    }
+
+    .em {
+      font-weight: 700;
+    }
+
     .contact {
       display: flex;
       align-items: center;
@@ -327,12 +366,23 @@
     </div>
     <br>
     <div>
-      <p>Phone Number: 0437800535</p>
+      <img class="icon-phone" src="images/phone.png" alt="phone">
+      <span class="phone">
+        <p class="ph">Phone Number:</p>
+
+        <p> 0437800535</p>
+      </span>
     </div>
+
     <div>
-      <p>Email: Miriam@gmail.com</p>
+      <img class="icon-email" src="images/email.png" alt="email">
+      <span class="email">
+        <p class="em">Email:</p>
+        <p>Miriam@gmail.com</p>
+      </span>
     </div>
   </div>
+
   <div class="contact">
     <div>
       <h1>Contact</h1>
