Add responsive image and input boxs

--- a/index.html
+++ b/index.html
@@ -308,6 +308,61 @@
         width: 100%;
         text-align: left;
       }
+
+      .flex-containers {
+
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        padding-bottom: 150px;
+      }
+
+      .flex-item-left {
+        width: auto;
+
+        text-align: center;
+        flex: 50%;
+      }
+
+      .flex-item-right {
+        width: auto;
+
+        flex: 50%;
+      }
+
+      .dog-walking {
+
+        width: 350px;
+        height: 503.28px;
+        border-radius: 15px;
+
+      }
+
+      .dog-sitting {
+        width: 350px;
+        height: 542.73px;
+
+        border-radius: 15px;
+      }
+
+      .miriam-dog {
+
+        width: 353.72px;
+        height: 542.73px;
+
+
+        border-radius: 15px;
+      }
+
+      .input {
+        padding: 10px;
+        background-color: #fff;
+        border: 1px solid #ddd;
+        width: 300px;
+        border-radius: 25px;
+      }
+
+
     }
   </style>
 </head>
