--- a/index.html
+++ b/index.html
@@ -25,9 +25,22 @@
     }
 
     .topnav {
+      /* Auto layout */
+
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      padding: 10px;
+      gap: 10px;
+
+
       overflow: hidden;
-      background-color: #333;
+
+      background-color: rgba(172, 198, 67, 0.58);
     }
+
+
 
     .topnav a {
       float: left;
@@ -39,6 +52,11 @@
       font-size: 17px;
     }
 
+    .topnav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
     .active {
       background-color: #04AA6D;
       color: white;
@@ -48,53 +66,15 @@
       display: none;
     }
 
-    .dropdown {
-      float: left;
-      overflow: hidden;
-    }
-
-    .dropdown .dropbtn {
-      font-size: 17px;
-      border: none;
-      outline: none;
-      color: white;
-      padding: 14px 16px;
-      background-color: inherit;
-      font-family: inherit;
-      margin: 0;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f9f9f9;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-      z-index: 1;
-    }
-
-    .dropdown-content a {
-      float: none;
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      text-align: left;
-    }
-
-    .topnav a:hover,
-    .dropdown:hover .dropbtn {
-      background-color: #555;
+    .topnav a.active {
+      background-color: #04AA6D;
       color: white;
     }
 
-    .dropdown-content a:hover {
-      background-color: #ddd;
-      color: black;
-    }
 
-    .dropdown:hover .dropdown-content {
-      display: block;
+    .hero-image {
+      width: 100%;
+      background-attachment: fixed;
     }
 
     .flex-containers {
@@ -264,6 +244,41 @@
       font-size: 17px;
     }
 
+
+    /* ----- Back to Top ----- */
+
+    .back-to-top {
+      position: fixed;
+      bottom: 4rem;
+      right: 4rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 5.5rem;
+      width: 5.5rem;
+      background-color: var(--green);
+      border-radius: 50%;
+      z-index: 10;
+      visibility: hidden;
+      transition: all .4s;
+    }
+
+    .back-to-top__image {
+      height: 70%;
+    }
+
+    @media(max-width: 900px) {
+      .back-to-top {
+        right: 2rem;
+      }
+    }
+
+    @media(max-width: 500px) {
+      .back-to-top {
+        right: 1rem;
+      }
+    }
+
     /* Tablet and Mobile */
     @media screen and (max-width: 600px) {
 
@@ -279,6 +294,11 @@
     }
 
     @media screen and (max-width: 600px) {
+      .topnav {
+        display: block;
+        padding: 0;
+      }
+
       .topnav.responsive {
         position: relative;
       }
@@ -368,23 +388,22 @@
 </head>
 
 <body>
+  <header class="header" role="banner" id="top">
+    <div class="topnav" id="myTopnav">
+      <a href="#myTopnav" class="active">Logo</a>
+      <a href="#services">Services</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
 
-  <div class="topnav" id="myTopnav">
-    <a href="#home" class="active">Logo</a>
-    <a href="#about">Services</a>
-    <a href="#news">About</a>
-    <a href="#contact">Contact</a>
 
+      <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
 
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-  </div>
+    <img class="hero-image" src="images/hero-image.jpg" alt="hero image">
+  </header>
 
-  <img src="images/hero-image.jpg" alt="hero image" style="width:100%; background-attachment: fixed; ">
-  <div style="padding-left:16px">
-
-  </div>
   <div class="flex-container">
-    <div>
+    <div class="services" id="services">
       <h1>Services</h1>
     </div>
   </div>
@@ -404,7 +423,7 @@
     </div>
   </div>
 
-  <div class="about">
+  <div class="about" id="about">
     <div>
       <h1>About</h1>
     </div>
@@ -438,7 +457,7 @@
     </div>
   </div>
 
-  <div class="contact">
+  <div class="contact" id="contact">
     <div>
       <h1>Contact</h1>
     </div>
@@ -477,8 +496,23 @@
       </p>
   </div>
   </footer>
-
+  <a href="#top" class="back-to-top" title="Back to Top">
+    <img src="./images/arrow-up.svg" alt="Back to Top" class="back-to-top__image" />
+  </a>
   <script>
+    window.onscroll = function () { firstFunction() };
+
+    var navbar = document.getElementById("myTopnav");
+    var sticky = navbar.offsetTop;
+
+    function firstFunction() {
+      if (window.pageYOffset >= sticky) {
+        navbar.classList.add("sticky")
+      } else {
+        navbar.classList.remove("sticky");
+      }
+
+    }
     function myFunction() {
       var x = document.getElementById("myTopnav");
       if (x.className === "topnav") {
@@ -487,6 +521,28 @@
         x.className = "topnav";
       }
     }
+
+    const backToTopButton = document.querySelector(".back-to-top");
+    let isBackToTopRendered = false;
+
+    let alterStyles = (isBackToTopRendered) => {
+      backToTopButton.style.visibility = isBackToTopRendered ? "visible" : "hidden";
+      backToTopButton.style.opacity = isBackToTopRendered ? 1 : 0;
+      backToTopButton.style.transform = isBackToTopRendered
+        ? "scale(1)"
+        : "scale(0)";
+    };
+
+    window.addEventListener("scroll", () => {
+      if (window.scrollY > 700) {
+        isBackToTopRendered = true;
+        alterStyles(isBackToTopRendered);
+      } else {
+        isBackToTopRendered = false;
+        alterStyles(isBackToTopRendered);
+      }
+    });
+
   </script>
 
 </body>
