Add bottom nav links to each section

--- a/index.html
+++ b/index.html
@@ -485,9 +485,9 @@
   <div class="footer">
     <footer>
       <div class="bottomNav">
-        <a href="#home" class="active">Logo</a>
-        <a href="#about">Services</a>
-        <a href="#news">About</a>
+        <a href="#top" class="active">Logo</a>
+        <a href="#services">Services</a>
+        <a href="#about">About</a>
         <a href="#contact">Contact</a>
       </div>
       <p class="attribution">
